--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -2522,6 +2522,10 @@ body {
   .main-header-menu li.ast-sub-menu-goes-outside.focus > ul {
     left: -100%;
   }
+  .main-header-menu li.ast-left-align-sub-menu .sub-menu li:hover > ul,
+  .main-header-menu li.ast-left-align-sub-menu .sub-menu li.focus > ul {
+    left: -100%;
+  }
 }
 
 .main-header-menu .sub-menu {
